# just-say

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh.md  build.rs  提示词.txt
.github/workflows/: ci.yml  release.yml
resources/: app.manifest
scripts/: build.ps1
src/: actions.rs  app.rs  audio.rs  clipboard.rs  config.rs  dpapi.rs  hotkey.rs  i18n.rs  ime.rs  injector.rs  intent.rs  logger.rs  main.rs  overlay.rs  refiner.rs  settings.rs  transcriber.rs  tray.rs  understanding.rs  util.rs
